Quickfix z-index bug

--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,9 @@ h6 {
     background-color: #232729; }
   .light .app {
     background-color: #f5f5f5; }
+  .app main {
+    position: relative;
+    z-index: 1; }
 
 .logo-wrapper {
   position: absolute;
@@ -151,8 +154,6 @@ h6 {
     transform: scale(0.9); } }
 
 .slogan {
-  position: relative;
-  z-index: 1;
   max-width: 100vw;
   padding: 0 15px;
   text-align: center; }
